# sistema_atividros_2026

./: .gitignore  Plano de Desenvolvimento — Sistema Atividros v1.md  README.md  Sistema atividros.md  docker-compose.yml  uvicorn_stderr.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  test_atividros.db  uvicorn_stderr.txt  uvicorn_stdout.txt
backend/app/: config.py  main.py
backend/app/api/: autenticacao.py  calculadora.py  clientes.py  compra.py  estoque.py  financeiro.py  pedidos.py  producao.py
backend/app/db/: session.py
backend/app/models/: __init__.py  cliente.py  compra.py  estoque.py  financeiro.py  pedido.py  tabela_preco.py  usuario.py
backend/app/schemas/: autenticacao.py  calculadora.py  cliente.py  compra.py  estoque.py  financeiro.py  pedido.py  producao.py  tabela_preco.py
backend/app/services/: autenticacao.py  calculadora.py  compra.py  financeiro.py  gerador_pdf.py  pedido.py  producao.py
backend/migrations/: env.py
backend/migrations/versions/: 1d90db490e6d_refatoracao_para_pt_br.py  77982b46ef92_initial_migration.py  criando_modulo_compras.py  criando_modulo_financeiro.py  (+2 more)
backend/scripts/: create_admin.py  recreate_db_docker.py
backend/tests/: conftest.py  test_auth.py  test_auth_extra.py  test_baixa_estoque.py  test_calculadora.py  test_calculadora_extra.py  test_calculadora_quadro.py  test_clientes.py  test_clientes_extra.py  test_compras.py  test_e2e.py  test_estoque.py  test_estoque_extra.py  test_financeiro.py  test_pdf.py  test_pedidos.py  test_pedidos_extra.py  test_producao.py
(+43 files in other folders)
